flux/apps/base/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    gateway-access: "true"
    istio-injection: enabled
