flux/apps/base/podinfo/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
spec:
  hosts:
    - "podinfo.stehessel.org"
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: podinfo.podinfo.svc.cluster.local
            port:
              number: 9898
