flux/apps/base/podinfo/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      # sectionName: http
  hostnames:
    - podinfo.stehessel.org
  rules:
    - backendRefs:
        - name: podinfo
          namespace: podinfo
          port: 9898
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      # sectionName: https
  hostnames:
    - podinfo.stehessel.org
  rules:
    - backendRefs:
        - name: podinfo
          namespace: podinfo
          port: 9898
      matches:
        - path:
            type: PathPrefix
            value: /
