flux/apps/base/podinfo/service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - "podinfo.stehessel.org"
  http:
    - route:
        - destination:
            host: podinfo.podinfo.svc.cluster.local
            port:
              number: 9898
